--- a/nftcalendar/package.json
+++ b/nftcalendar/package.json
@@ -9,8 +9,9 @@
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "react-scripts": "4.0.3",
+    "web-vitals": "^2.1.0",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
