--- a/nftcalendar/package.json
+++ b/nftcalendar/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.48.0",
     "web-vitals": "^2.1.0",
     "web3": "^1.6.1"
   },
